kubernetes/apps/monitoring/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: monitoring
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector: {}
        # Allow ingress from pods in networking namespace that are part of ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
        # Node metrics monitoring
        - ipBlock:
            cidr: 172.16.32.0/32
        - ipBlock:
            cidr: 172.16.33.0/32
        - ipBlock:
            cidr: 172.16.34.0/32
        - ipBlock:
            cidr: 172.16.35.0/32
        - ipBlock:
            cidr: 172.16.36.0/32
  policyTypes:
    - Ingress
